now also works on hopt.se and glasbanken.se, though with suboptimal beer name extraction. also fixed wishlist-icon covering long beer names.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,6 +19,7 @@ main.mainWrapper {
 
 .wishlistContainer {
   position: absolute;
-  top: 65px;
-  right: 10px;
+  top: 60px;
+  right: 7px;
+  background: none;
 }
